--- a/index.html
+++ b/index.html
@@ -1,114 +1,37 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf8" />
-    <title>Código de conduta da conferência</title>
-    <link rel="stylesheet" href="/style.css" />
-  </head>
-  <body>
-    <h1>Código de Conduta da Conferência</h1>
+## Welcome to GitHub Pages
 
-    <p>
-      Participantes, palestrantes, representantes de empresas e pessoas
-      voluntárias da conferência precisam concordar com este código de conduta.
-      A equipe organizadora vai reforçar que este código seja seguido durante
-      todo o evento. Esperamos a cooperação de todas as partes para ajudar a
-      garantir um ambiente seguro para qualquer pessoa.
-    </p>
+You can use the [editor on GitHub](https://github.com/EwertonJordao/ga_sp_coc/edit/master/index.md) to maintain and preview the content for your website in Markdown files.
 
-    <h2>Versão rápida</h2>
+Whenever you commit to this repository, GitHub Pages will run [Jekyll](https://jekyllrb.com/) to rebuild the pages in your site, from the content in your Markdown files.
 
-    <p>
-      Nossa conferência é dedicada a fornecer uma experiência livre de assédio
-      para todas as pessoas, independentemente do sexo, identidade de gênero e
-      expressão, idade, orientação sexual, deficiência, aparência física,
-      tamanho corporal, cor de pele, etnia, religião (ou falta dela) ou escolhas
-      de tecnologias. Não toleramos o assédio a participantes da conferência,
-      sob qualquer forma. Linguagem e imagens sexuais não são apropriadas em
-      nenhum local, incluindo palestras, workshops, festas, Twitter e outras
-      mídias on-line. Violações destas regras poderão causar expulsão da
-      conferência,
-      <em>sem restituição</em>, a critério da equipe organizadora.
-    </p>
+### Markdown
 
-    <h2>Versão mais longa</h2>
-    <p>
-      Constituem assédio comentários verbais ofensivos relacionados a gênero,
-      identidade de gênero e expressão, idade, orientação sexual, deficiência,
-      aparência física, tamanho corporal, cor de pele, etnia, religião, escolhas
-      de tecnologias, imagens sexuais em espaços públicos, intimidação
-      deliberada, perseguição, <em>stalking</em>, fotografias ou filmagens
-      constrangedoras, interrupção contínua das apresentações ou outros eventos,
-      contato físico inadequado e atenção sexual indesejada.
-    </p>
+Markdown is a lightweight and easy-to-use syntax for styling your writing. It includes conventions for
 
-    <p>
-      Participantes que receberem uma solicitação para interromper qualquer
-      comportamento de assédio devem fazer isso imediatamente.
-    </p>
+```markdown
+Syntax highlighted code block
 
-    <p>
-      As políticas antiassédio também se aplicam a representantes de empresas
-      patrocinadoras. Em particular, não devem usar imagens, atividades ou outro
-      material de cunho sexual. As equipes de estandes e tendas (incluindo
-      pessoas voluntárias) não devem utilizar roupas, uniformes ou trajes
-      sexualizados ou criar um ambiente sexualizado de quaisquer formas.
-    </p>
+# Header 1
+## Header 2
+### Header 3
 
-    <p>
-      Se alguém se envolver em comportamento de assédio, a equipe organizadora
-      poderá tomar todas as medidas que considerar adequadas, incluindo avisar a
-      pessoa ofensora ou expulsá-la da conferência sem nenhum reembolso.
-    </p>
+- Bulleted
+- List
 
-    <p>
-      Caso sofra assédio, perceba que alguém esteja sofrendo assédio ou tenha
-      alguma dúvida, entre em contato com alguém da organização imediatamente.
-      As pessoas da equipe da conferência podem ser identificadas, pois estarão
-      vestindo camisetas marcadas.
-    </p>
+1. Numbered
+2. List
 
-    <p>
-      A organização estará disposta a auxiliar participantes a entrar em contato
-      com a segurança do hotel ou local, bem como aplicar a legislação
-      pertinente, fornecer escoltas ou ajudar pessoas que sofrerem assédio para
-      que se sintam seguras durante a conferência. Valorizamos sua participação.
-    </p>
+**Bold** and _Italic_ and `Code` text
 
-    <p>
-      Esperamos que todas as pessoas participantes sigam estas regras em salas
-      de apresentação e workshops da conferência, além de eventos sociais
-      relacionados.
-    </p>
+[Link](url) and ![Image](src)
+```
 
-    <div class="footer">
-      <p>
-        <small
-          ><em
-            >Crédito e fonte original:
-            <a href="http://2012.jsconf.us/#/about"
-              >http://2012.jsconf.us/#/about</a
-            >
-            &amp;
-            <a
-              href="http://geekfeminism.wikia.com/wiki/Conference_anti-harassment/Policy"
-              >The Ada Initiative</a
-            ><br />
+For more details see [GitHub Flavored Markdown](https://guides.github.com/features/mastering-markdown/).
 
-            Por favor, ajude a traduzir ou a melhorar:
-            <a href="https://github.com/confcodeofconduct/confcodeofconduct.com"
-              >on github.com</a
-            ><br />
+### Jekyll Themes
 
-            Esta obra está licenciada sob
-            <a
-              rel="license"
-              href="http://creativecommons.org/licenses/by/3.0/deed.en_US"
-              >Creative Commons Attribution 3.0 Unported License</a
-            ></em
-          ></small
-        >
-      </p>
-    </div>
-  </body>
-</html>
+Your Pages site will use the layout and styles from the Jekyll theme you have selected in your [repository settings](https://github.com/EwertonJordao/ga_sp_coc/settings). The name of this theme is saved in the Jekyll `_config.yml` configuration file.
+
+### Support or Contact
+
+Having trouble with Pages? Check out our [documentation](https://help.github.com/categories/github-pages-basics/) or [contact support](https://github.com/contact) and we’ll help you sort it out.
